# aiden

./: README.md  list_example.py  pyproject.toml  vision_changes.md  zombies.md
data/: clean_docs.txt
src/aiden/: FLET_DEMOS_README.md  FLET_QUICK_START.md  KIVY_EXAMPLES_SUMMARY.md  KIVY_GUIDE.md  README.md  __init__.py  actors.py  ai_demo.py  basic_flet_demo.py  chat_bot.py  d.py  flet_demo.py  game.py  gui.py  hello_world_flet.py  interactive_flet.py  kivy_game.py  kivy_requirements.txt  kivy_simple.py  main.py  mathlib.py  quests.py  scenes.py  utils.py  working_flet_demo.py  zombie.py
src/aiden/adventure/: actors.py  game.py  main.py  scenes.py
src/aiden/former/: chat_bot.py  fd.py  flet_features_demo.py  hello_flet.py  kivy_counter.py  kivy_form.py  kivy_hello.py  lesson0914.py  math_demo.py  maths.py  pex.py  simple_flet_demo.py  simple_form.py  tdg.py  test_kivy.py  test_maths.py  user.py
tests/: conftest.py  test_actors_extra.py  test_aiden_core.py  test_game_api.py  test_math_lib.py  test_quests.py  test_scenes.py
