[project]
name = "aiden"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andy Miles", email = "andy@proquickly.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "flask>=3.1.1",
    "flet[all]==0.28.3",
    "kivy>=2.3.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "panda3d>=1.10.15",
    "pysnooper>=1.2.3",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "seaborn>=0.13.2",
]

[project.scripts]
christine = "aiden:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiden",
]

[tool.uv.sources]
aiden = { workspace = true }
